<resources>
    <string name="app_name">Best House</string>
    <string name="place_holder">Place holder</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget malesuada lacus. Maecenas blandit bibendum sem, ac laoreet ipsum. Mauris aliquet feugiat diam quis aliquet. Quisque mollis laoreet turpis id tempor. In hac habitasse platea dictumst. Sed vehicula id ligula quis convallis. Duis id arcu et sapien maximus molestie et nec est. In maximus lacus mi, sit amet interdum elit porta at. Donec et tempor felis. Pellentesque pulvinar nulla ipsum, vitae consectetur quam ullamcorper vitae. Quisque ut sagittis ligula, in eleifend dolor.</string>
    <string name="description">Description:</string>
    <string name="recommended">Recommended</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="top_near_by">Top near by</string>
    <string name="search_location">Search location</string>
    <string name="select_property">Select property type</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_here">Have an account? Login Here</string>
    <string name="login_here">Don\'t have an account? Sign Up Here</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="confirm_password_hint">Re-Enter Password:</string>
    <string name="fullname_hint">Full name:</string>
    <string name="phone_hint">Phone Number:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">WELCOME!</string>
    <string name="continue_text">CONTINUE</string>
    <string name="pname_hint">Property Name:</string>
    <string name="ptype_hint">Property Type:</string>
    <string name="padress_hint">Address:</string>
    <string name="bedroom_hint">Bedroom Quantity:</string>
    <string name="bathroom_hint">Bathroom Quantity:</string>
    <string name="price_hint">Monthly Price:</string>
    <string name="title_activity_land_lord_maps">LandLordMapsActivity</string>
    <string name="water_property_checkbox">WATER</string>
    <string name="electric_property_checkbox">ELECTRIC</string>
    <string name="internet_property_checkbox">INTERNET</string>
    <string name="gas_property_checkbox">GAS</string>
    <string name="submit_text">SUBMIT</string>
    <string name="property_area_hint">Property Area</string>
    <string name="or_text_separated_line">OR</string>


    <string name="facebook_app_id">689963932856138</string>
    <string name="fb_login_protocol_scheme">fb689963932856138</string>
    <string name="facebook_client_token">691af87f8afd0647726668a9cd702c2b</string>


    <string name="message">Message</string>
    <string name="see_more"><![CDATA[See more >>]]></string>
    <string name="chats">Chats</string>
    <string name="title_activity_message">MessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="send_message">Send Message</string>
    <string name="add_property">Add Property</string>
    <string name="property_type">Property Type</string>
    <string name="contract_details">Contract details</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="property_name">Property name</string>
    <string name="property_address">Property address</string>
    <string name="tenant_details">Tenant details</string>
    <string name="landlord_information">Landlord information</string>
    <string name="place_reservation">Place reservation</string>
    <string name="property_details">Property details</string>
    <string name="select_location">Select location</string>
    <string name="facebook_login_button">Facebook login button</string>
    <string name="google_login_button">Google login button</string>
    <string name="input_message">Input message</string>
    <string name="slider">slider</string>
    <string name="all_contract">All Contract</string>
    <string name="top_near_you">Top Near You</string>
    <string name="accept">Accept</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">Tenant</string>
    <string name="loyalty_point">Loyalty point:</string>
    <string name="_0_points">0 points</string>
    <string name="landlord_s_name">landlord\'s name</string>
    <string name="pending_request">Pending Request</string>
    <string name="_0_km">0 KM</string>
    <string name="apartment">Apartment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="no_contract_history_at_the_moment">No contract history at the moment</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION!</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection</string>
    <string name="retry">RETRY</string>
</resources>