<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_60sdp"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/besthouse_logo" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="@dimen/_30sdp"

            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:hint="@string/email_hint"
            android:textSize="@dimen/_20ssp"
            android:padding="@dimen/_10sdp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:background="@drawable/shadow_background"
            android:textColor="@color/BLACK"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:hint="@string/password_hint"
            android:textSize="@dimen/_20ssp"
            android:padding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:background="@drawable/shadow_background"
            android:textColor="@color/BLACK"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/common_signin_button_text"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/WHITE"
            android:background="@drawable/button_background"/>
    </LinearLayout>
    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="@dimen/_30sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLogin"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>