<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AddPropertyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.Material3.CollapsingToolbar.Large"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:collapsedTitleTextAppearance="@style/Bold_Heading"
            app:expandedTitleTextAppearance="@style/Bold_Heading"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/homeToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_round_arrow_back_24"
                app:title="Edit property" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/add_property_name"
                layout="@layout/layout_input" />

<!--            <include-->
<!--                android:id="@+id/property_type"-->
<!--                layout="@layout/layout_spinner_property_select" />-->

            <com.google.android.material.textfield.TextInputLayout
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:hint="Property Type">

                <AutoCompleteTextView
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/property_address"
                layout="@layout/layout_input" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="10dp">

                    <CheckBox
                        android:id="@+id/electric_option_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_utilities_checkbox_btn"
                        android:layoutDirection="rtl"
                        android:padding="18dp"
                        android:text="@string/electric_property_checkbox" />

                    <CheckBox
                        android:id="@+id/water_option_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_utilities_checkbox_btn"
                        android:layoutDirection="rtl"
                        android:padding="18dp"
                        android:text="@string/water_property_checkbox" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <CheckBox
                        android:id="@+id/internet_option_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/bg_utilities_checkbox_btn"
                        android:layoutDirection="rtl"
                        android:padding="18dp"
                        android:text="@string/internet_property_checkbox" />

                    <CheckBox
                        android:id="@+id/gas_option_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_utilities_checkbox_btn"
                        android:layoutDirection="rtl"
                        android:padding="18dp"
                        android:text="@string/gas_property_checkbox" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/bedroomText"
                    style="@style/Bold_SubHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:text="@string/bedroom_hint" />

                <include
                    android:id="@+id/bedroomQuantity"
                    layout="@layout/addproperty_smallbox_layout"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/bathroomText"
                    style="@style/Bold_SubHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:text="@string/bathroom_hint" />

                <include
                    android:id="@+id/bathroomQuantity"
                    layout="@layout/addproperty_smallbox_layout"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/areaText"
                    style="@style/Bold_SubHeading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:text="@string/property_area_hint" />

                <include
                    android:id="@+id/propertyArea"
                    layout="@layout/addproperty_smallbox_layout"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include
                    android:id="@+id/property_price"
                    layout="@layout/layout_input" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/property_image_select_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_property_image_add" />

            <include
                android:id="@+id/property_description"
                layout="@layout/addproperty_propertydetail_textbox" />

            <include
                android:id="@+id/progress_button"
                layout="@layout/layout_progressbar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
